--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link href="https://fonts.googleapis.com/css?family=Dosis:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Signika:700&display=swap" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Eleven Speed - ecommerce BikeShop</title>
   </head>
