--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
+  <script src="https://kit.fontawesome.com/9e9654d8b3.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
   <script>
     let scroll = new SmoothScroll('a[href*="#"]', {speed: 300});
